--- a/public/index.html
+++ b/public/index.html
@@ -17,18 +17,10 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Github finder</title>
-    <script>
+    <!-- <script>
       var APP_ID = "qgglww7a";
       (function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',w.intercomSettings);}else{var d=document;var i=function(){i.c(arguments);};i.q=[];i.c=function(args){i.q.push(args);};w.Intercom=i;var l=function(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/' + APP_ID;var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s, x);};if(document.readyState==='complete'){l();}else if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
-      </script>
-      <script>
-      window.Intercom('boot', {
-  app_id: 'qgglww7a',
-  // name: data.user.username,
-  // email: data.user.email,
-  // user_id: data.user.id,
-});
-      </script>
+      </script> -->
   </head>
   <body>
     <div id="root"></div>
